# Updated-Stock-Research

./: .gitignore  Open Stock Research Dashboard.bat  README.md  StockResearchDashboard.spec  Stop Stock Research Dashboard.bat  app.py  desktop_launcher.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
.streamlit/: config.toml  secrets.example.toml
docs/: packaging.md  streamlit_cloud_deploy.md  windows_desktop_build.md
scripts/: build_mac.sh  build_windows.bat  publish_to_github.command
src/stock_research/: __init__.py  analysis_engine.py  config.py  dataclasses.py  excel_parser.py  local_secrets.py  market_data.py  preferences.py  reporting.py  similar_companies.py  workbook_discovery.py
src/stock_research/ai/: __init__.py  context.py  providers.py
src/stock_research/dashboard/: __init__.py  views.py
src/stock_research/models/: __init__.py
src/stock_research/services/: __init__.py
tests/: __init__.py  test_ai_context_budget.py  test_ai_provider_options.py  test_ai_provider_web_search.py  test_ai_response_cleanup.py  test_news_context.py  test_profitability_score.py  test_quarter_classification.py  test_similar_companies.py  test_workbook_discovery.py
